tests/snapshots/cli_exit_codes__human-hf-cache-sync-stdout.snap
---
source: tests/cli_exit_codes.rs
expression: normalize(&stdout)
---
Done: 1 file(s), $N KB → 1 downloaded, 0 skipped (exists), 1 verified, 0 failed
$TMP/hub/models--a--b/snapshots/0123456789abcdef0123456789abcdef01234567
