tests/snapshots/cli_exit_codes__human-update-check-up-to-date.snap
---
source: tests/cli_exit_codes.rs
expression: normalize(&stderr)
---
Checking for updates…
rust-hf-downloader is up to date (v2.13.1)
