tests/snapshots/cli_exit_codes__human-usage-error.snap
---
source: tests/cli_exit_codes.rs
expression: normalize(&stderr)
---
error [usage]: invalid model ID "no-slash" — expected "author/model-name"
